# RGB-Image-Processing-Pipeline

./: CMakeLists.txt  Doxyfile  README.md  test_log.txt
html/: graph_legend.html  index.html
include/: Color.hpp  Command.hpp  Image.hpp  Scrim.hpp
include/Command/: Add.hpp  Blank.hpp  Chain.hpp  Crop.hpp  Fill.hpp  HMirror.hpp  Invert.hpp  Move.hpp  Open.hpp  Replace.hpp  Resize.hpp  RotateLeft.hpp  RotateRight.hpp  ScaleUp.hpp  Slide.hpp  ToGrayScale.hpp  VMirror.hpp
latex/: refman.tex
src/: Color.cpp  Command.cpp  Image.cpp  ScrimParser.cpp
src/Command/: Add.cpp  Chain.cpp  Crop.cpp  Fill.cpp  HMirror.cpp  Invert.cpp  Move.cpp  Replace.cpp  Resize.cpp  RotateLeft.cpp  RotateRight.cpp  Save.cpp  ScaleUp.cpp  Slide.cpp  ToGrayScale.cpp  VMirror.cpp
